🛠 fix gh pages deployment issues

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     <script>
       var urlParams = new URLSearchParams(window.location.search);
       var t = urlParams.get("t");
-      if (!t) window.location = "/?t=" + new Date().getTime();
+      if (!t) window.location = "?t=" + new Date().getTime();
     </script>
   </head>
   <body>
