🛠 refactor, updated google sheet link

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,10 @@
     />
     <meta property="og:url" content="https://chcepe.github.io/bayanihan-dir/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bayanihandir" />
+    <meta
+      property="og:title"
+      content="Bayanihandir | Search nearby community pantries"
+    />
     <meta
       property="og:description"
       content="Bayanihandir is a platform to find
@@ -58,7 +61,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@chcepe" />
     <meta name="twitter:creator" content="@chcepe" />
-    <meta name="twitter:title" content="Bayanihandir" />
+    <meta
+      name="twitter:title"
+      content="Bayanihandir | Search nearby community pantries"
+    />
     <meta
       name="twitter:description"
       content="Bayanihandir is a platform to find
